Fix spacing

--- a/my-app/src/Navbar/Navbar.css
+++ b/my-app/src/Navbar/Navbar.css
@@ -46,7 +46,3 @@ nav {
     -ms-user-select: none;
     user-select: none;
 }
-
-ul {
-    margin-left: 50px;
-}
